@@ -37,6 +37,7 @@ Wolfpack 12.9.14 Beta (SVN)
   - Added the command showserials.
   - Implemented nodecay flag for regions.
   - Fixed kills (it was not possible to become a murderer).
+  - Implemented a method to send a client an url to open in a webbrowser.
  * Definition Changes:
   - Tinker buy some items now
   - Bench (0x1049) which was crafted was "unusable"
